add getting all comments
